Matching Algo Code
